--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -92,6 +92,7 @@
     text-align: center;
     border-radius: 35px;
     outline: none;
+    background: white;
 }
 
 /* Styling for the random button */
