--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -75,6 +75,7 @@
     cursor: pointer;
 }
 
+/* Container for the Search bar */
 .navbar_search_container {
     height: 80px;
     display: flex;
@@ -84,6 +85,7 @@
     margin-right: 10px;
 }
 
+/* Search bar*/
 .navbar_input {
     height: 2.1rem;
     width: 300px;
@@ -164,6 +166,7 @@
         display: table;
     }
 
+    /* Search bar container */
     .navbar_search_container {
         justify-content: center;
     }
